@@ -1,5 +1,11 @@
 2025-07-31  Zhengyi Fu  <i@fuzy.me>
 
+	Switch to motion state in `magit-blob-mode'
+
+	* init.el (+meow-maybe-switch-to-motion): New function.
+
+2025-07-31  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/gptel-config.el (kimi-coder): Update system message.
 
 2025-07-31  Zhengyi Fu  <i@fuzy.me>
